packages/svelte/tests/compiler-errors/samples/props-duplicate-destructuring/main.svelte
<script>
	let { foo: a } = $props();
	let { foo: b } = $props.bindable();
</script>
